fixed FAB overlapping with footer

--- a/frontend/src/app/task/task.component.scss
+++ b/frontend/src/app/task/task.component.scss
@@ -41,7 +41,7 @@ md-icon.filter-toggler {
 
 button[md-fab] {
     position: absolute;
-    bottom: 23px;
+    bottom: 53px;
     right: 23px;
     color: $primary-light;
 }
